<?xml version="1.0" encoding="utf-8"?>
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerVertical="true"
    android:layout_gravity="center_vertical">

    <RadioButton
        android:id="@+id/chinese_but"
        android:layout_width="158dp"
        android:layout_height="wrap_content"
        android:text="@string/chinese">

    </RadioButton>

    <RadioButton
        android:id="@+id/englis_but"
        android:layout_width="158dp"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/english" />
    <View
        android:layout_width="wrap_content"
        android:layout_height="5dp"></View>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="2">

        <EditText
            android:layout_width="265dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:id="@+id/url_setting"
            android:hint="@string/URL"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/go_but"
            android:text="@string/go"
            android:layout_weight="1"/>
    </LinearLayout>

</RadioGroup>
